--- a/configuration.properties
+++ b/configuration.properties
@@ -9,3 +9,4 @@ customer_password=12345
 #How we get data from this file?
 #We create a java class to read the file
 #fileinutstream, properties object
+bir satir daha
