--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,14 @@
             <version>7.3.4</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+    </dependencies><properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+</properties>
+
+
+
+
 
 
 
