--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,10 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
 
     <!-- paste plugins after dependencies tag-->
